# bug-bazel_source_maps

./: .bazelrc  .gitignore  .prettierrc  .vsls.json  BUILD.bazel  README.md  WORKSPACE  package.json  tsconfig.json
apps/app/: BUILD.bazel
apps/app/src/: main.ts
tools/: BUILD.bazel
tools/bazel-rules/: docker_image.bzl  repo_status.bzl
